--- a/style.css
+++ b/style.css
@@ -3,3 +3,39 @@ body {
   height: 100%;
   margin: 0;
 }
+
+header {
+  text-align: center;
+}
+
+img {
+  margin-right: auto;
+  margin-left: auto;
+}
+
+nav a {
+  padding: 0px 10px 0px 10px;
+  background-color: grey;
+}
+
+figcaption {
+  font-size: small;
+  text-align: center;
+}
+
+#featured-property p {
+  width: 800px;
+  text-align: center;
+  padding: 10px 0px 10px 0px;
+}
+
+#featured-property{
+  margin: auto;
+}
+
+#details div {
+  float: left;
+  width: 25%;
+  text-align: center;
+  background-color: blue;
+}
