Automatically backed up by Learn

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ figcaption {
 
 #featured-property p {
   display: block;
+  margin: 0 auto;
   width: 800px;
   text-align: center;
   padding: 10px 0px 10px 0px;
